--- a/lang/id.json
+++ b/lang/id.json
@@ -92,5 +92,6 @@
     "Grade": "Jenjang",
     "Level": "Tingkat",
     "Capacity": "Kapasitas",
-    "Homeroom": "Wali Kelas"
+    "Homeroom": "Wali Kelas",
+    "KK Number": "Nomor KK"
 }
