--- a/lang/id.json
+++ b/lang/id.json
@@ -1,97 +1,123 @@
 {
-    "Accepted at": "diterima pada",
-    "address": "alamat",
-    "Admission": "Penerimaan",
+    "Accepted at": "Diterima pada",
+    "Account": "Akun",
+    "Add new file": "Tambah berkas baru",
+    "Address": "Alamat",
+    "Admission": "PSB",
     "Alive": "Hidup",
-    "amount": "jumlah",
     "Amount": "Jumlah",
     "Bill": "Tagihan",
-    "bill": "tagihan",
-    "Bill id": "ID Tagihan",
+    "Bill id": "ID tagihan",
     "Birth place": "Tempat lahir",
-    "capacity": "kapasitas",
-    "category": "kategori",
+    "Cancel": "Batal",
+    "Capacity": "Kapasitas",
+    "Category": "Kategori",
+    "Certificate": "Sertifikat",
+    "Certificate number": "Nomor sertifikat",
+    "Choose file": "Pilih berkas",
     "Classroom": "Kelas",
     "Closed at": "Tutup pada",
-    "code": "kode",
     "Code": "Kode",
-    "content": "isi",
-    "country": "negara",
-    "Created at": "Dibuat",
+    "Content": "Konten",
+    "Country": "Negara",
+    "Created at": "Dibuat pada",
+    "Data": "Data",
+    "Data updated": "Data diperbarui",
     "Date of birth": "Tanggal lahir",
-    "district": "daerah",
-    "email": "e-mail",
+    "District": "Jalan",
+    "Download": "Unduh",
+    "Education History": "Riwayat Pendidikan",
+    "Educations": "Pendidikan",
+    "Email": "Email",
     "Employee": "Karyawan",
-    "grade": "nilai",
-    "heroicon-o-chat-bubble-oval-left-ellipsis": "heroicon-o-chat-gelembung-oval-kiri-elipsis",
-    "homeroom": "wali kelas",
-    "Bomeroom id": "wali ID Kelas",
-    "IDR": "Rp",
-    "index": "indeks",
-    "Bssuer id": "ID Penerbit",
-    "items": "item",
-    "items_sum_amount": "item_jumlah_jumlah_",
+    "father": "ayah",
+    "Father": "Ayah",
+    "File": "Berkas",
+    "Files": "Berkas",
+    "Grade": "Kelas",
+    "Gray": "Abu-abu",
+    "Homeroom": "Ruang kelas",
+    "Homeroom id": "ID ruang kelas",
+    "IDR": "IDR",
+    "Index": "Indeks",
+    "Indonesia": "Indonesia",
+    "Issuer id": "ID penerbit",
+    "Items": "Item",
+    "Items sum amount": "Jumlah item",
     "Joined at": "Bergabung pada",
+    "KK Number": "Nomor KK",
     "Last modified": "Terakhir diubah",
-    "lat": "lat",
-    "level": "tingkat",
-    "long": "panjang",
-    "Management": "Pengelolaan",
-    "method": "metode",
-    "name": "nama",
-    "new-password": "kata sandi baru",
+    "Lat": "Lat",
+    "Level": "Level",
+    "LLLL": "LLLL",
+    "Long": "Long",
+    "Management": "Manajemen",
+    "Method": "Metode",
+    "Mother": "Ibu",
+    "Name": "Nama",
+    "New-password": "Kata sandi baru",
     "NIK": "NIK",
     "NISN": "NISN",
-    "note": "catatan",
     "Note": "Catatan",
+    "Not yet filled": "Belum diisi",
+    "Npsn": "NPSN",
+    "NPSN": "NPSN",
     "Opened at": "Dibuka pada",
     "Paid at": "Dibayar pada",
-    "Paid_off at": "Dilunasi pada",
-    "Password": "Kata sandi",
-    "password": "kata sandi",
-    "passwordConfirmation": "Konfirmasi kata sandi",
+    "Paid off at": "Dilunasi pada",
+    "Password": "Kata Sandi",
+    "PasswordConfirmation": "Konfirmasi Kata Sandi",
     "Password confirmation": "Konfirmasi kata sandi",
-    "payer": "pembayar",
-    "Bayer id": "ID Pembayar",
+    "Payer": "Pembayar",
+    "Payer id": "ID pembayar",
     "Payment": "Pembayaran",
-    "phone": "telepon",
-    "primary": "utama",
+    "Periods": "Periode",
+    "Phone": "Telepon",
+    "Primary": "Utama",
     "Profile": "Profil",
-    "profile": "profil",
-    "province": "propinsi",
-    "receiver": "penerima",
-    "Beceiver id": "ID Penerima",
-    "regency": "daerah",
-    "registeredBy": "terdaftar Oleh",
-    "Registered at": "terdaftar pada",
-    "registered_by": "terdaftar_oleh",
+    "Province": "Provinsi",
+    "Receiver": "Penerima",
+    "Receiver id": "ID penerima",
+    "Regency": "Kabupaten",
+    "Registered By": "TerdaftarOleh",
+    "Registered at": "Terdaftar pada",
+    "Registered by": "Terdaftar oleh",
     "Registrant": "Pendaftar",
-    "registrant": "pendaftar",
-    "Registrant id ": "ID Pendaftar",
-    "rt": "rt",
+    "Registrant id": "ID pendaftar",
+    "Rt": "RT",
     "RT": "RT",
-    "rw": "rw",
+    "Rw": "RW",
     "RW": "RW",
-    "secondary": "sekunder",
+    "Save": "Simpan",
+    "School certificate file": "Berkas ijazah sekolah",
+    "School certificate number": "Nomor ijazah sekolah",
+    "School Name": "Nama sekolah",
+    "Secondary": "Sekunder",
     "Student": "Siswa",
-    "success": "kesuksesan",
+    "Success": "Berhasil",
+    "Trustee": "Wali amanat",
     "Updated at": "Diperbarui pada",
-    "user": "pengguna",
+    "Upload": "Unggah",
+    "Uploaded": "Diunggah",
     "User": "Pengguna",
-    "User id": "ID Pengguna",
-    "Validated at": "divalidasi pada",
-    "Verified at": "terverifikasi pada",
-    "village": "desa",
-    "wave": "gelombang",
+    "Users": "Pengguna",
+    "User id": "ID pengguna",
+    "Validated at": "Divalidasi pada",
+    "Verified at": "Terverifikasi pada",
+    "Village": "Desa",
     "Wave": "Gelombang",
-    "Wave id": "ID Gelombang",
-    "year": "tahun",
+    "Wave id": "ID gelombang",
     "Year": "Tahun",
-    "zipcode": "kode pos",
-    "Name": "Nama",
-    "Grade": "Jenjang",
-    "Level": "Tingkat",
-    "Capacity": "Kapasitas",
-    "Homeroom": "Wali Kelas",
-    "KK Number": "Nomor KK"
+    "Year id": "ID tahun",
+    "Zipcode": "Kode pos",
+    "Nationality": "Kebangsaan",
+    "Blood type": "Golongan darah",
+    "Child order": "Urutan anak",
+    "Aspiration": "Aspirasi",
+    "Religion": "Agama",
+    "Siblings count": "Jumlah saudara kandung",
+    "Sex": "Jenis kelamin",
+    "Is alive?": "Masih hidup?",
+    "Payment components": "Komponen pembayaran",
+    "Officer": "Petugas"
 }
