--- a/lang/en.json
+++ b/lang/en.json
@@ -1,91 +1,318 @@
 {
+    "(and :count more error)": "(and :count more error)",
+    "(and :count more errors)": "(and :count more error)|(and :count more errors)|(and :count more errors)",
+    "A decryption key is required.": "A decryption key is required.",
+    "A Timeout Occurred": "A Timeout Occurred",
+    "Accept": "Accept",
+    "Accepted": "Accepted",
     "accepted_at": "accepted_at",
+    "Action": "Action",
+    "Actions": "Actions",
+    "Add": "Add",
+    "Add :name": "Add :name",
     "address": "address",
+    "Admin": "Admin",
     "Admission": "Admission",
+    "Agree": "Agree",
     "Alive": "Alive",
+    "All rights reserved.": "All rights reserved.",
+    "Already Reported": "Already Reported",
     "amount": "amount",
     "Amount": "Amount",
     "APP_TEST_EMAIL": "APP_TEST_EMAIL",
+    "Archive": "Archive",
+    "Assign": "Assign",
+    "Associate": "Associate",
+    "Attach": "Attach",
+    "Bad Gateway": "Bad Gateway",
+    "Bad Request": "Bad Request",
+    "Bandwidth Limit Exceeded": "Bandwidth Limit Exceeded",
     "Bill": "Bill",
     "bill": "bill",
     "bill_id": "bill_id",
     "Birth place": "Birth place",
+    "Browse": "Browse",
+    "Cancel": "Cancel",
     "capacity": "capacity",
     "category": "category",
+    "Choose": "Choose",
+    "Choose :name": "Choose :name",
+    "Choose File": "Choose File",
+    "Choose Image": "Choose Image",
     "Classroom": "Classroom",
+    "Click to copy": "Click to copy",
+    "Client Closed Request": "Client Closed Request",
+    "Close": "Close",
     "closed_at": "closed_at",
     "code": "code",
+    "Collapse": "Collapse",
+    "Collapse All": "Collapse All",
+    "Comment": "Comment",
+    "Confirm": "Confirm",
+    "Conflict": "Conflict",
+    "Connect": "Connect",
+    "Connection Closed Without Response": "Connection Closed Without Response",
+    "Connection Timed Out": "Connection Timed Out",
     "content": "content",
+    "Continue": "Continue",
     "country": "country",
+    "Create": "Create",
+    "Create :name": "Create :name",
+    "Created": "Created",
     "created_at": "created_at",
     "Date of birth": "Date of birth",
+    "Delete": "Delete",
+    "Delete :name": "Delete :name",
+    "Detach": "Detach",
+    "Details": "Details",
+    "Disable": "Disable",
+    "Discard": "Discard",
     "district": "district",
+    "Done": "Done",
+    "Down": "Down",
+    "Duplicate": "Duplicate",
+    "Duplicate :name": "Duplicate :name",
+    "Edit": "Edit",
+    "Edit :name": "Edit :name",
     "email": "email",
     "Employee": "Employee",
+    "Enable": "Enable",
+    "Encrypted environment file already exists.": "Encrypted environment file already exists.",
+    "Encrypted environment file not found.": "Encrypted environment file not found.",
+    "Environment file already exists.": "Environment file already exists.",
+    "Environment file not found.": "Environment file not found.",
+    "errors": "errors",
+    "Expand": "Expand",
+    "Expand All": "Expand All",
+    "Expectation Failed": "Expectation Failed",
+    "Explanation": "Explanation",
+    "Export": "Export",
+    "Export :name": "Export :name",
+    "Failed Dependency": "Failed Dependency",
+    "File": "File",
+    "Files": "Files",
+    "Forbidden": "Forbidden",
+    "Found": "Found",
+    "Gateway Timeout": "Gateway Timeout",
+    "Go Home": "Go Home",
+    "Go to page :page": "Go to page :page",
+    "Gone": "Gone",
     "grade": "grade",
+    "Hello!": "Hello!",
     "heroicon-o-chat-bubble-oval-left-ellipsis": "heroicon-o-chat-bubble-oval-left-ellipsis",
+    "Hide": "Hide",
+    "Hide :name": "Hide :name",
+    "Home": "Home",
     "homeroom": "homeroom",
     "homeroom_id": "homeroom_id",
+    "HTTP Version Not Supported": "HTTP Version Not Supported",
+    "I'm a teapot": "I'm a teapot",
     "IDR": "IDR",
+    "If you did not create an account, no further action is required.": "If you did not create an account, no further action is required.",
+    "If you did not request a password reset, no further action is required.": "If you did not request a password reset, no further action is required.",
+    "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:",
+    "IM Used": "IM Used",
+    "Image": "Image",
+    "Impersonate": "Impersonate",
+    "Impersonation": "Impersonation",
+    "Import": "Import",
+    "Import :name": "Import :name",
     "index": "index",
+    "Insufficient Storage": "Insufficient Storage",
+    "Internal Server Error": "Internal Server Error",
+    "Introduction": "Introduction",
+    "Invalid filename.": "Invalid filename.",
+    "Invalid JSON was returned from the route.": "Invalid JSON was returned from the route.",
+    "Invalid SSL Certificate": "Invalid SSL Certificate",
     "issuer_id": "issuer_id",
     "items": "items",
     "items_sum_amount": "items_sum_amount",
     "joined_at": "joined_at",
     "Last modified": "Last modified",
     "lat": "lat",
+    "length": "length",
+    "Length Required": "Length Required",
     "level": "level",
+    "Like": "Like",
+    "Load": "Load",
+    "Localize": "Localize",
+    "Location": "Location",
+    "Locked": "Locked",
+    "Log In": "Log In",
+    "Log Out": "Log Out",
+    "Login": "Login",
+    "Logout": "Logout",
     "long": "long",
+    "Loop Detected": "Loop Detected",
+    "Maintenance Mode": "Maintenance Mode",
     "Management": "Management",
     "method": "method",
+    "Method Not Allowed": "Method Not Allowed",
+    "Misdirected Request": "Misdirected Request",
+    "Moved Permanently": "Moved Permanently",
+    "Multi-Status": "Multi-Status",
+    "Multiple Choices": "Multiple Choices",
     "name": "name",
+    "Network Authentication Required": "Network Authentication Required",
+    "Network Connect Timeout Error": "Network Connect Timeout Error",
+    "Network Read Timeout Error": "Network Read Timeout Error",
+    "New": "New",
+    "New :name": "New :name",
     "new-password": "new-password",
     "NIK": "NIK",
     "NISN": "NISN",
+    "No": "No",
+    "No Content": "No Content",
+    "Non-Authoritative Information": "Non-Authoritative Information",
+    "Not Acceptable": "Not Acceptable",
+    "Not Extended": "Not Extended",
+    "Not Found": "Not Found",
+    "Not Implemented": "Not Implemented",
+    "Not Modified": "Not Modified",
     "note": "note",
     "Note": "Note",
+    "of": "of",
+    "OK": "OK",
+    "Open": "Open",
+    "Open in a current window": "Open in a current window",
+    "Open in a new window": "Open in a new window",
+    "Open in a parent frame": "Open in a parent frame",
+    "Open in the topmost frame": "Open in the topmost frame",
+    "Open on the website": "Open on the website",
     "opened_at": "opened_at",
+    "Origin Is Unreachable": "Origin Is Unreachable",
+    "Page Expired": "Page Expired",
+    "Pagination Navigation": "Pagination Navigation",
     "paid_at": "paid_at",
     "paid_off_at": "paid_off_at",
+    "Partial Content": "Partial Content",
     "Password": "Password",
     "password": "password",
-    "passwordConfirmation": "passwordConfirmation",
     "Password confirmation": "Password confirmation",
+    "passwordConfirmation": "passwordConfirmation",
     "payer": "payer",
     "payer_id": "payer_id",
+    "Payload Too Large": "Payload Too Large",
     "Payment": "Payment",
+    "Payment Required": "Payment Required",
+    "Permanent Redirect": "Permanent Redirect",
     "phone": "phone",
+    "Please click the button below to verify your email address.": "Please click the button below to verify your email address.",
+    "Precondition Failed": "Precondition Failed",
+    "Precondition Required": "Precondition Required",
+    "Preview": "Preview",
+    "Price": "Price",
     "primary": "primary",
+    "Processing": "Processing",
     "Profile": "Profile",
     "profile": "profile",
     "province": "province",
+    "Proxy Authentication Required": "Proxy Authentication Required",
+    "Railgun Error": "Railgun Error",
+    "Range Not Satisfiable": "Range Not Satisfiable",
     "receiver": "receiver",
     "receiver_id": "receiver_id",
+    "Record": "Record",
+    "Regards,": "Regards,",
     "regency": "regency",
-    "registeredBy": "registeredBy",
+    "Register": "Register",
     "registered_at": "registered_at",
     "registered_by": "registered_by",
+    "registeredBy": "registeredBy",
     "Registrant": "Registrant",
     "registrant": "registrant",
     "registrant_id": "registrant_id",
+    "Request Header Fields Too Large": "Request Header Fields Too Large",
+    "Request Timeout": "Request Timeout",
+    "Reset Content": "Reset Content",
+    "Reset Password": "Reset Password",
+    "Reset Password Notification": "Reset Password Notification",
+    "Restore": "Restore",
+    "Restore :name": "Restore :name",
+    "results": "results",
+    "Retry With": "Retry With",
     "rt": "rt",
     "RT": "RT",
     "rw": "rw",
     "RW": "RW",
+    "Save": "Save",
+    "Save & Close": "Save & Close",
+    "Save & Return": "Save & Return",
+    "Save :name": "Save :name",
+    "Search": "Search",
+    "Search :name": "Search :name",
     "secondary": "secondary",
+    "See Other": "See Other",
+    "Select": "Select",
+    "Select All": "Select All",
+    "Send": "Send",
+    "Server Error": "Server Error",
+    "Service Unavailable": "Service Unavailable",
+    "Session Has Expired": "Session Has Expired",
+    "Settings": "Settings",
+    "Show": "Show",
+    "Show :name": "Show :name",
+    "Show All": "Show All",
+    "Showing": "Showing",
+    "Sign In": "Sign In",
+    "Solve": "Solve",
+    "SSL Handshake Failed": "SSL Handshake Failed",
+    "Start": "Start",
+    "Stop": "Stop",
     "Student": "Student",
+    "Submit": "Submit",
+    "Subscribe": "Subscribe",
     "success": "success",
+    "Switch": "Switch",
+    "Switch To Role": "Switch To Role",
+    "Switching Protocols": "Switching Protocols",
+    "Tag": "Tag",
+    "Tags": "Tags",
+    "Temporary Redirect": "Temporary Redirect",
+    "The given data was invalid.": "The given data was invalid.",
+    "The response is not a streamed response.": "The response is not a streamed response.",
+    "The response is not a view.": "The response is not a view.",
+    "This action is unauthorized.": "This action is unauthorized.",
+    "This password reset link will expire in :count minutes.": "This password reset link will expire in :count minutes.",
+    "to": "to",
+    "Toggle navigation": "Toggle navigation",
+    "Too Early": "Too Early",
+    "Too Many Requests": "Too Many Requests",
+    "Translate": "Translate",
+    "Translate It": "Translate It",
+    "Unauthorized": "Unauthorized",
+    "Unavailable For Legal Reasons": "Unavailable For Legal Reasons",
+    "Unknown Error": "Unknown Error",
+    "Unpack": "Unpack",
+    "Unprocessable Entity": "Unprocessable Entity",
+    "Unsubscribe": "Unsubscribe",
+    "Unsupported Media Type": "Unsupported Media Type",
+    "Up": "Up",
+    "Update": "Update",
+    "Update :name": "Update :name",
     "updated_at": "updated_at",
+    "Upgrade Required": "Upgrade Required",
+    "URI Too Long": "URI Too Long",
+    "Use Proxy": "Use Proxy",
     "user": "user",
+    "User": "User",
     "user_id": "user_id",
     "validated_at": "validated_at",
+    "Variant Also Negotiates": "Variant Also Negotiates",
     "verified_at": "verified_at",
+    "Verify Email Address": "Verify Email Address",
+    "View": "View",
+    "View :name": "View :name",
     "village": "village",
     "wave": "wave",
     "Wave": "Wave",
     "wave_id": "wave_id",
+    "Web Server is Down": "Web Server is Down",
+    "Whoops!": "Whoops!",
     "year": "year",
     "Year": "Year",
     "year_id": "year_id",
+    "Yes": "Yes",
+    "You are receiving this email because we received a password reset request for your account.": "You are receiving this email because we received a password reset request for your account.",
     "zipcode": "zipcode"
 }
