add more details

--- a/lang/id.json
+++ b/lang/id.json
@@ -345,5 +345,8 @@
     "Zipcode": "Kode pos",
     "Name and number of street or name of residence": "Nama dan nomor jalan atau nama perumahan",
     "Data saved successfully": "Data berhasil disimpan",
-    "Registrant photo": "Foto calon santri"
+    "Registrant photo": "Foto calon santri",
+    "Last education grade": "Jenjang pendidikan terakhir",
+    "Work": "Pekerjaan",
+    "Search village": "Cari desa/kelurahan"
 }
