--- a/lang/id.json
+++ b/lang/id.json
@@ -358,5 +358,14 @@
     "Announcement": "Pengumuman",
     "Placement": "Penempatan",
     "Title": "Judul",
-    "Interview schedule has been arranged": "Jadwal wawancara telah diatur"
+    "Interview schedule has been arranged": "Jadwal wawancara telah diatur",
+    "Interview": "Wawancara",
+    "Registrant total": "Total pendaftar",
+    "Unpaid bill amount": "Tagihan yang belum dibayar",
+    "students": "santri",
+    "Total bill amount": "Total tagihan",
+    "Monthly registrant": "Pendaftar bulanan",
+    "registrants": "pendaftar",
+    "Interview today": "Wawancara hari ini",
+    "Upcoming interiew": "Wawancara yang akan datang"
 }
