--- a/lang/id.json
+++ b/lang/id.json
@@ -14,7 +14,7 @@
     "Add new file": "Tambah berkas baru",
     "Address": "Alamat",
     "Admin": "Admin",
-    "Admission": "PSB",
+    "Admission": "PPDB",
     "Agree": "Setuju",
     "Alive": "Hidup",
     "All rights reserved.": "Hak Cipta Dilindungi.",
@@ -44,7 +44,7 @@
     "Choose file": "Pilih berkas",
     "Choose File": "Pilih Berkas",
     "Choose Image": "Pilih Gambar",
-    "Classroom": "Kelas",
+    "Classroom": "Jenjang pendidikan",
     "Click to copy": "Klik untuk menyalin",
     "Client Closed Request": "Permintaan ditutup klien",
     "Close": "Tutup",
@@ -109,7 +109,7 @@
     "Go Home": "Ke Halaman Utama",
     "Go to page :page": "Ke halaman :page",
     "Gone": "Hilang",
-    "Grade": "Kelas",
+    "Grade": "Jenjang pendidikan",
     "Gray": "Abu-abu",
     "Hello!": "Halo!",
     "Hide": "Bersembunyi",
@@ -260,8 +260,8 @@
     "Save & Close": "Simpan & Tutup",
     "Save & Return": "Simpan & Kembalikan",
     "Save :name": "Hemat :name",
-    "School certificate file": "Berkas ijazah sekolah",
-    "School certificate number": "Nomor ijazah sekolah",
+    "School certificate file": "Berkas ijazah",
+    "School certificate number": "Nomor ijazah",
     "School Name": "Nama sekolah",
     "Search": "Cari",
     "Search :name": "Pencarian :name",
@@ -393,5 +393,8 @@
     "Identity": "Identitas",
     "Father Data": "Data Ayah",
     "Mother Data": "Data Ibu",
-    "Personal Data": "Data Pribadi"
+    "Personal Data": "Data Pribadi",
+    "Monthly income": "Penghasilan perbulan",
+    "File type": "Jenis berkas",
+    "User avatar": "Foto pengguna"
 }
