--- a/lang/id.json
+++ b/lang/id.json
@@ -393,6 +393,7 @@
     "Identity": "Identitas",
     "Father Data": "Data Ayah",
     "Mother Data": "Data Ibu",
+    "Trustee Data": "Data Wali",
     "Personal Data": "Data Pribadi",
     "Monthly income": "Penghasilan perbulan",
     "File type": "Jenis berkas",
